[package]
name = "daipendency-testing"
version = "1.2.1"
edition = "2021"
description = "Test helpers for Daipendency and extractors"
repository = "https://github.com/daipendency/daipendency-testing"
homepage = "https://github.com/daipendency/daipendency-testing"
documentation = "https://docs.rs/daipendency-testing"
license = "MIT"
authors = ["Gus Narea"]

[dependencies]
tempfile = "3.16.0"
tree-sitter = "^0.25.2"
